# template-project-python-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post_create_commands.sh
.github/workflows/: release.yml
codegen/: README.md
codegen/cpp/: package-lock.json  package.json
codegen/cpp/model/: CarCreateV1.cpp  CarCreateV1.h  CarCreateV2.cpp  CarCreateV2.h  CarResponseV1.cpp  CarResponseV1.h  CarResponseV2.cpp  CarResponseV2.h  FuelType.cpp  FuelType.h  HTTPValidationError.cpp  HTTPValidationError.h  Helpers.cpp  Helpers.h  TransmissionType.cpp  TransmissionType.h  TruckCreateV1.cpp  TruckCreateV1.h  TruckCreateV2.cpp  TruckCreateV2.h  TruckResponseV1.cpp  TruckResponseV1.h  TruckResponseV2.cpp  TruckResponseV2.h  ValidationError.cpp  ValidationError.h  ValidationError_loc_inner.cpp  ValidationError_loc_inner.h  Vehicle.cpp  Vehicle.h  VehicleResponseV1.cpp  VehicleResponseV1.h  VehicleResponseV2.cpp  VehicleResponseV2.h  Vehicle_1.cpp  Vehicle_1.h
codegen/julia/: package-lock.json  package.json
codegen/julia/src/: APIClient.jl  modelincludes.jl
codegen/julia/src/apis/: api_DefaultApi.jl
codegen/julia/src/models/: model_CarCreateV1.jl  model_CarCreateV2.jl  model_CarResponseV1.jl  model_CarResponseV2.jl  model_FuelType.jl  model_HTTPValidationError.jl  model_TransmissionType.jl  model_TruckCreateV1.jl  model_TruckCreateV2.jl  model_TruckResponseV1.jl  model_TruckResponseV2.jl  model_ValidationError.jl  model_ValidationErrorLocInner.jl  model_Vehicle.jl  model_Vehicle1.jl  (+2 more)
codegen/typescript/: openapi-ts.config.ts  package-lock.json  package.json
openapi/: generate_openapi_schema.py  openapi.json
src/: vehicles.db
src/workspace/: __init__.py
src/xyz_api/: main.py
src/xyz_api/core/: calculate_price.py
src/xyz_api/database/: connection.py  vehicles.py
src/xyz_api/endpoints/: vehicles.py
src/xyz_api/schemas/: vehicles.py
tests/: README.md  conftest.py  test_vehicles.py
tests/property_based/: test_calculate_price.py  test_utils.py
(+2 files in other folders)
