[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xyz_api"]

[project]
name = "xyz_api_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6,<3",
    "fastapi>=0.115.11,<1",
    "uvicorn>=0.34.0,<1",
    ]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0,<5",
]
deploy = [

]

all = [
    "xyz_api_template[dev]",
    "xyz_api_template[deploy]",
]

# Add semantic release configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = ""
upload_to_pypi = false  # Set to true if you want to publish to PyPI
commit_message = "chore(release): {version}"
commit_author = "semantic-release-bot <semantic-release-bot@github.com>"

[tool.uv.workspace]
members = [
    "test",
]
