[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

#[tool.hatch.metadata]
#allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xyz_api"]

[project]
name = "xyz_api_template"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6,<3",
    "fastapi>=0.115.11,<1",
    "uvicorn>=0.34.0,<1",
    ]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0,<5",
]
test = [
    "pytest>=8.3.5,<9",
    "httpx>=0.28.1,<1",
]

all = [
    "xyz_api_template[dev]",
    "xyz_api_template[test]",
]

# Add semantic release configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = ""
upload_to_pypi = false  # Set to true if you want to publish to PyPI
commit_message = "chore(release): {version}"
commit_author = "semantic-release-bot <semantic-release-bot@github.com>"
